# smtp_client

./: CMakeLists.txt  README.md  smtp_client.vix  vix.json
examples/: send_plain.cpp  send_starttls_login.cpp
include/smtp_client/: smtp_client.hpp
tests/: test_basic.cpp
